--- a/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -4,9 +4,9 @@
   "item.minecraft.glow_ink_sac": "荧光墨囊",
   "item.minecraft.shield": "木盾牌",
   "block.minecraft.bell": "金钟",
-  "block.minecraft.slime_block": "Glue Block",
+  "block.minecraft.slime_block": "胶水块",
   "item.minecraft.shield.white": "白色木盾牌",
-  "item.minecraft.shield.orange": "橙色",
+  "item.minecraft.shield.orange": "橙色木盾牌",
   "item.minecraft.shield.magenta": "品红色木盾牌",
   "item.minecraft.shield.light_blue": "淡蓝色木盾牌",
   "item.minecraft.shield.yellow": "黄色木盾牌",
