--- a/src/main/resources/assets/tfc/lang/zh_cn.json
+++ b/src/main/resources/assets/tfc/lang/zh_cn.json
@@ -30,22 +30,22 @@
   "subtitles.block.tfc.bloomery.crackle": "锻铁炉：噼啪作响",
   "subtitles.block.tfc.quern.drag": "手推磨：研磨声",
   "subtitles.block.tfc.loom.weave": "织机：劈啪作响",
-  "subtitles.block.tfc.bellows.blow": "空气：被吹动",
+  "subtitles.block.tfc.bellows.blow": "空气：呼~",
   "subtitles.block.tfc.tool_rack.place_item": "工具架：放上物品",
-  "subtitles.block.tfc.wattle.dyed": "板条：被染色",
-  "subtitles.block.tfc.wattle.daubed": "板条：被涂抹",
-  "subtitles.block.tfc.wattle.woven": "板条：被编织",
+  "subtitles.block.tfc.wattle.dyed": "板条：染色",
+  "subtitles.block.tfc.wattle.daubed": "板条：涂抹涂料",
+  "subtitles.block.tfc.wattle.woven": "板条：编织木棍",
   "subtitles.block.tfc.scribing_table.rename_item": "玩家：书写",
   "subtitles.block.tfc.barrel.opened": "大桶：打开",
   "subtitles.block.tfc.barrel.closed": "大桶：关闭",
-  "subtitles.block.tfc.vessel.opened": "启封大缸",
-  "subtitles.block.tfc.vessel.closed": "密封大缸",
+  "subtitles.block.tfc.vessel.opened": "大缸：打开",
+  "subtitles.block.tfc.vessel.closed": "大缸：关闭",
   "subtitles.block.tfc.anvil.hit": "铁砧：铿锵",
   "subtitles.block.tfc.barrel.drip": "大桶：流水",
   "subtitles.item.tfc.fertilizer.use": "肥料：播撒",
   "subtitles.item.tfc.pan.use": "淘金盘：过滤",
   "subtitles.item.tfc.ceramic.break": "陶瓷：破碎",
-  "subtitles.item.tfc.jug.blow": "陶罐：被吹奏",
+  "subtitles.item.tfc.jug.blow": "陶罐：吹奏",
   "subtitles.item.tfc.knapping.clay": "黏土：挤压",
   "subtitles.item.tfc.knapping.leather": "皮革：切割",
   "subtitles.item.tfc.knapping.rock": "石子：敲击",
@@ -4280,10 +4280,10 @@
   "block.tfc.dead_crop.garlic": "枯萎的大蒜",
   "block.tfc.wild_crop.garlic": "野生大蒜",
   "item.tfc.seeds.garlic": "大蒜种子",
-  "block.tfc.crop.green_bean": "绿豆",
-  "block.tfc.dead_crop.green_bean": "枯萎的绿豆",
-  "item.tfc.seeds.green_bean": "绿豆种子",
-  "block.tfc.wild_crop.green_bean": "野生绿豆",
+  "block.tfc.crop.green_bean": "青豆",
+  "block.tfc.dead_crop.green_bean": "枯萎的青豆",
+  "item.tfc.seeds.green_bean": "青豆种子",
+  "block.tfc.wild_crop.green_bean": "野生青豆",
   "block.tfc.crop.melon": "西瓜",
   "block.tfc.dead_crop.melon": "枯死的西瓜",
   "block.tfc.wild_crop.melon": "野生西瓜",
@@ -4332,27 +4332,27 @@
   "block.tfc.dead_crop.yellow_bell_pepper": "枯萎的黄甜椒",
   "block.tfc.wild_crop.yellow_bell_pepper": "野生黄甜椒",
   "item.tfc.seeds.yellow_bell_pepper": "黄甜椒种子",
-  "block.tfc.plant.athyrium_fern": "蹄盖蕨",
+  "block.tfc.plant.athyrium_fern": "画蕨",
   "block.tfc.plant.canna": "美人蕉",
   "block.tfc.plant.goldenrod": "一枝黄花",
   "block.tfc.plant.pampas_grass": "蒲苇",
   "block.tfc.plant.perovskia": "分药花",
   "block.tfc.plant.beachgrass": "滨草",
-  "block.tfc.plant.bluegrass": "蓝草",
+  "block.tfc.plant.bluegrass": "早熟禾",
   "block.tfc.plant.bromegrass": "雀麦草",
   "block.tfc.plant.fountain_grass": "狼尾草",
-  "block.tfc.plant.manatee_grass": "海牛草",
+  "block.tfc.plant.manatee_grass": "针叶藻",
   "block.tfc.plant.orchard_grass": "鸭茅",
   "block.tfc.plant.ryegrass": "黑麦草",
   "block.tfc.plant.scutch_grass": "匍匐冰草",
-  "block.tfc.plant.star_grass": "星草",
+  "block.tfc.plant.star_grass": "小竹叶",
   "block.tfc.plant.timothy_grass": "猫尾草",
-  "block.tfc.plant.raddia_grass": "萝卜草",
+  "block.tfc.plant.raddia_grass": "玉米竺",
   "block.tfc.plant.allium": "绒球葱",
   "block.tfc.plant.anthurium": "花烛",
-  "block.tfc.plant.arrowhead": "箭叶芋",
+  "block.tfc.plant.arrowhead": "慈姑",
   "block.tfc.plant.houstonia": "茜草花",
-  "block.tfc.plant.badderlocks": "翅藻",
+  "block.tfc.plant.badderlocks": "翅菜",
   "block.tfc.plant.cordgrass": "大米草",
   "block.tfc.plant.barrel_cactus": "圆筒掌",
   "block.tfc.plant.blood_lily": "火球花",
@@ -4361,17 +4361,17 @@
   "block.tfc.plant.calendula": "金盏花",
   "block.tfc.plant.cattail": "阔叶香蒲",
   "block.tfc.plant.laminaria": "海带",
-  "block.tfc.plant.marigold": "金盏花",
+  "block.tfc.plant.marigold": "万寿菊",
   "block.tfc.plant.bur_reed": "黑三棱",
-  "block.tfc.plant.butterfly_milkweed": "蝶乳草",
+  "block.tfc.plant.butterfly_milkweed": "柳叶马利筋",
   "block.tfc.plant.black_orchid": "黑兰花",
   "block.tfc.plant.cobblestone_lichen": "圆石地衣",
   "block.tfc.plant.coontail": "金鱼藻",
   "block.tfc.plant.dandelion": "蒲公英",
   "block.tfc.plant.dead_bush": "枯萎的灌木",
-  "block.tfc.plant.desert_flame": "沙漠烈焰",
+  "block.tfc.plant.desert_flame": "金头菊",
   "block.tfc.plant.duckweed": "浮萍",
-  "block.tfc.plant.eel_grass": "鳗鱼草",
+  "block.tfc.plant.eel_grass": "苦草",
   "block.tfc.plant.field_horsetail": "问荆",
   "block.tfc.plant.foxglove": "毛地黄",
   "block.tfc.plant.grape_hyacinth": "葡萄风信子",
@@ -4382,17 +4382,17 @@
   "block.tfc.plant.hibiscus": "木槿花",
   "block.tfc.plant.ivy": "常春藤",
   "block.tfc.plant.kangaroo_paw": "袋鼠爪花",
-  "block.tfc.plant.king_fern": "国王蕨",
-  "block.tfc.plant.labrador_tea": "拉布拉多茶树",
-  "block.tfc.plant.lady_fern": "淑女蕨",
-  "block.tfc.plant.licorice_fern": "甘草蕨",
+  "block.tfc.plant.king_fern": "莲座蕨",
+  "block.tfc.plant.labrador_tea": "杜香",
+  "block.tfc.plant.lady_fern": "蹄盖蕨",
+  "block.tfc.plant.licorice_fern": "多足蕨",
   "block.tfc.plant.artists_conk": "树舌",
   "block.tfc.plant.lily_of_the_valley": "铃兰",
-  "block.tfc.plant.lilac": "丁香花",
+  "block.tfc.plant.lilac": "丁香",
   "block.tfc.plant.lotus": "莲花",
   "block.tfc.plant.maiden_pink": "少女石竹",
-  "block.tfc.plant.meads_milkweed": "乳草",
-  "block.tfc.plant.milfoil": "欧蓍草",
+  "block.tfc.plant.meads_milkweed": "草地马利筋",
+  "block.tfc.plant.milfoil": "狐尾藻",
   "block.tfc.plant.morning_glory": "牵牛花",
   "block.tfc.plant.philodendron": "喜林芋",
   "block.tfc.plant.moss": "苔藓",
@@ -4401,24 +4401,24 @@
   "block.tfc.plant.oxeye_daisy": "滨菊",
   "block.tfc.plant.phragmite": "芦苇",
   "block.tfc.plant.pickerelweed": "梭鱼草",
-  "block.tfc.plant.pistia": "水浮莲",
+  "block.tfc.plant.pistia": "水白菜",
   "block.tfc.plant.poppy": "虞美人",
   "block.tfc.plant.primrose": "报春花",
   "block.tfc.plant.pulsatilla": "白头翁花",
   "block.tfc.plant.red_algae": "红藻",
-  "block.tfc.plant.red_sealing_wax_palm": "红封蜡棕",
-  "block.tfc.plant.reindeer_lichen": "石蕊",
+  "block.tfc.plant.red_sealing_wax_palm": "红杆槟榔",
+  "block.tfc.plant.reindeer_lichen": "鹿蕊",
   "block.tfc.plant.rose": "玫瑰",
-  "block.tfc.plant.sacred_datura": "曼陀罗花",
-  "block.tfc.plant.sagebrush": "着山艾灌木",
-  "block.tfc.plant.sago": "西谷米",
+  "block.tfc.plant.sacred_datura": "洋金花",
+  "block.tfc.plant.sagebrush": "三齿蒿",
+  "block.tfc.plant.sago": "篦齿眼子菜",
   "block.tfc.plant.saguaro_fruit": "巨人柱果",
-  "block.tfc.plant.sapphire_tower": "蓝宝石凤梨",
+  "block.tfc.plant.sapphire_tower": "高山龙舌凤梨",
   "block.tfc.plant.sargassum": "马尾藻",
   "block.tfc.plant.sea_lavender": "补血草",
   "block.tfc.plant.sea_palm": "海棕榈",
-  "block.tfc.plant.guzmania": "果子蔓",
-  "block.tfc.plant.silver_spurflower": "银马刺花",
+  "block.tfc.plant.guzmania": "星花凤梨",
+  "block.tfc.plant.silver_spurflower": "银叶马刺花",
   "block.tfc.plant.snapdragon_pink": "粉红色金鱼草",
   "block.tfc.plant.snapdragon_red": "红色金鱼草",
   "block.tfc.plant.snapdragon_white": "白色金鱼草",
@@ -4426,54 +4426,54 @@
   "block.tfc.plant.strelitzia": "鹤望兰",
   "block.tfc.plant.switchgrass": "柳枝稷",
   "block.tfc.plant.sword_fern": "刺羽耳蕨",
-  "block.tfc.plant.tall_fescue_grass": "高羊茅草",
+  "block.tfc.plant.tall_fescue_grass": "苇状羊茅",
   "block.tfc.plant.toquilla_palm": "巴拿马草",
   "block.tfc.plant.trillium": "延龄草",
-  "block.tfc.plant.tropical_milkweed": "热带乳草",
+  "block.tfc.plant.tropical_milkweed": "马利筋",
   "block.tfc.plant.tulip_orange": "橙色郁金香",
   "block.tfc.plant.tulip_pink": "粉红色郁金香",
   "block.tfc.plant.tulip_red": "红色郁金香",
   "block.tfc.plant.tulip_white": "白色郁金香",
-  "block.tfc.plant.turtle_grass": "泰莱草",
+  "block.tfc.plant.turtle_grass": "泰莱藻",
   "block.tfc.plant.vriesea": "莺歌凤梨",
   "block.tfc.plant.water_canna": "水生美人蕉",
   "block.tfc.plant.water_lily": "睡莲",
   "block.tfc.plant.water_taro": "水生芋头",
   "block.tfc.plant.yucca": "丝兰花",
-  "block.tfc.plant.hanging_vines": "悬挂的藤蔓",
+  "block.tfc.plant.hanging_vines": "垂吊的藤蔓",
   "block.tfc.plant.jungle_vines": "丛林藤蔓",
-  "block.tfc.plant.liana": "藤",
-  "block.tfc.plant.tree_fern": "树蕨",
+  "block.tfc.plant.liana": "木质藤",
+  "block.tfc.plant.tree_fern": "白桫椤",
   "block.tfc.plant.arundo": "芦竹",
   "block.tfc.plant.spanish_moss": "松萝凤梨",
-  "block.tfc.plant.winged_kelp": "带翅海带",
-  "block.tfc.plant.leafy_kelp": "多叶海带",
+  "block.tfc.plant.winged_kelp": "翅藻",
+  "block.tfc.plant.leafy_kelp": "巨大昆布",
   "block.tfc.plant.giant_kelp_flower": "巨藻花",
   "block.tfc.plant.dry_phragmite": "干芦苇",
-  "block.tfc.plant.tree_fern_plant": "树蕨",
+  "block.tfc.plant.tree_fern_plant": "白桫椤",
   "block.tfc.plant.arundo_plant": "芦竹",
-  "block.tfc.plant.winged_kelp_plant": "带翅海带",
-  "block.tfc.plant.leafy_kelp_plant": "多叶海带",
-  "block.tfc.plant.giant_kelp_plant": "巨型海带",
-  "block.tfc.plant.hanging_vines_plant": "悬挂的藤蔓",
-  "block.tfc.plant.spanish_moss_plant": "松萝菠萝",
-  "block.tfc.plant.liana_plant": "藤",
+  "block.tfc.plant.winged_kelp_plant": "翅藻",
+  "block.tfc.plant.leafy_kelp_plant": "巨大昆布",
+  "block.tfc.plant.giant_kelp_plant": "巨藻",
+  "block.tfc.plant.hanging_vines_plant": "垂吊的藤蔓",
+  "block.tfc.plant.spanish_moss_plant": "松萝凤梨",
+  "block.tfc.plant.liana_plant": "木质藤",
   "block.tfc.plant.dry_phragmite_plant": "干芦苇",
   "block.tfc.plant.saguaro": "巨人柱枝干",
   "block.tfc.plant.saguaro_plant": "巨人柱枝干",
   "block.tfc.plant.potted.allium": "绒球葱花盆",
   "block.tfc.plant.potted.anthurium": "花烛花盆",
-  "block.tfc.plant.potted.athyrium_fern": "蹄盖蕨花盆",
+  "block.tfc.plant.potted.athyrium_fern": "画蕨花盆",
   "block.tfc.plant.potted.black_orchid": "黑兰花花盆",
   "block.tfc.plant.potted.blood_lily": "火球花花盆",
   "block.tfc.plant.potted.blue_orchid": "兰花花盆",
   "block.tfc.plant.potted.blue_ginger": "蓝姜花盆",
-  "block.tfc.plant.potted.butterfly_milkweed": "蝶乳草花盆",
+  "block.tfc.plant.potted.butterfly_milkweed": "柳叶马利筋花盆",
   "block.tfc.plant.potted.calendula": "金盏花花盆",
   "block.tfc.plant.potted.canna": "美人蕉花盆",
   "block.tfc.plant.potted.dandelion": "蒲公英花盆",
   "block.tfc.plant.potted.dead_bush": "枯萎的灌木花盆",
-  "block.tfc.plant.potted.desert_flame": "沙漠烈焰花盆",
+  "block.tfc.plant.potted.desert_flame": "金头菊花盆",
   "block.tfc.plant.potted.field_horsetail": "问荆花盆",
   "block.tfc.plant.potted.foxglove": "毛地黄花盆",
   "block.tfc.plant.potted.goldenrod": "一枝黄花花盆",
@@ -4482,11 +4482,11 @@
   "block.tfc.plant.potted.heather": "帚石南花盆",
   "block.tfc.plant.potted.houstonia": "茜草花花盆",
   "block.tfc.plant.potted.kangaroo_paw": "袋鼠爪花花盆",
-  "block.tfc.plant.potted.labrador_tea": "拉布拉多茶树花盆",
-  "block.tfc.plant.potted.lady_fern": "淑女蕨花盆",
+  "block.tfc.plant.potted.labrador_tea": "杜香花盆",
+  "block.tfc.plant.potted.lady_fern": "蹄盖蕨花盆",
   "block.tfc.plant.potted.lily_of_the_valley": "铃兰花盆",
   "block.tfc.plant.potted.maiden_pink": "少女石竹花盆",
-  "block.tfc.plant.potted.meads_milkweed": "乳草花盆",
+  "block.tfc.plant.potted.meads_milkweed": "草地马利筋花盆",
   "block.tfc.plant.potted.nasturtium": "旱金莲花盆",
   "block.tfc.plant.potted.ostrich_fern": "荚果蕨花盆",
   "block.tfc.plant.potted.oxeye_daisy": "滨菊花盆",
@@ -4495,11 +4495,11 @@
   "block.tfc.plant.potted.primrose": "报春花花盆",
   "block.tfc.plant.potted.pulsatilla": "白头翁花花盆",
   "block.tfc.plant.potted.rose": "玫瑰花盆",
-  "block.tfc.plant.potted.sacred_datura": "曼陀罗花花盆",
-  "block.tfc.plant.potted.sagebrush": "着山艾灌木花盆",
+  "block.tfc.plant.potted.sacred_datura": "洋金花花盆",
+  "block.tfc.plant.potted.sagebrush": "三齿蒿花盆",
   "block.tfc.plant.potted.saguaro_fruit": "巨人柱果花盆",
   "block.tfc.plant.potted.sapphire_tower": "蓝宝石凤梨花盆",
-  "block.tfc.plant.potted.silver_spurflower": "银马刺花花盆",
+  "block.tfc.plant.potted.silver_spurflower": "银叶马刺花花盆",
   "block.tfc.plant.potted.snapdragon_pink": "粉红色金鱼草花盆",
   "block.tfc.plant.potted.snapdragon_red": "红色金鱼草花盆",
   "block.tfc.plant.potted.snapdragon_white": "白色金鱼草花盆",
@@ -4508,7 +4508,7 @@
   "block.tfc.plant.potted.sword_fern": "刺羽耳蕨花盆",
   "block.tfc.plant.potted.toquilla_palm": "巴拿马草花盆",
   "block.tfc.plant.potted.trillium": "延龄草花盆",
-  "block.tfc.plant.potted.tropical_milkweed": "热带乳草花盆",
+  "block.tfc.plant.potted.tropical_milkweed": "马利筋花盆",
   "block.tfc.plant.potted.tulip_orange": "橙色郁金香花盆",
   "block.tfc.plant.potted.tulip_pink": "粉红色郁金香花盆",
   "block.tfc.plant.potted.tulip_red": "红色郁金香花盆",
@@ -4517,8 +4517,8 @@
   "block.tfc.plant.potted.barrel_cactus": "圆筒掌花盆",
   "block.tfc.plant.potted.morning_glory": "牵牛花花盆",
   "block.tfc.plant.potted.moss": "苔藓花盆",
-  "block.tfc.plant.potted.reindeer_lichen": "石蕊花盆",
-  "block.tfc.plant.potted.tree_fern": "树蕨花盆",
+  "block.tfc.plant.potted.reindeer_lichen": "鹿蕊花盆",
+  "block.tfc.plant.potted.tree_fern": "白桫椤花盆",
   "block.tfc.plant.potted.sea_palm": "海棕榈花盆",
   "block.tfc.plant.potted.philodendron": "喜林芋花盆",
   "block.tfc.sea_pickle": "海泡菜",
@@ -4643,7 +4643,7 @@
   "item.tfc.food.cabbage": "卷心菜",
   "item.tfc.food.carrot": "胡萝卜",
   "item.tfc.food.garlic": "大蒜",
-  "item.tfc.food.green_bean": "绿豆",
+  "item.tfc.food.green_bean": "青豆",
   "item.tfc.food.green_bell_pepper": "绿甜椒",
   "item.tfc.food.onion": "洋葱",
   "item.tfc.food.potato": "马铃薯",
@@ -6457,10 +6457,10 @@
   "item.tfc.bucket.tallow": "蜡脂桶",
   "fluid.tfc.tallow": "蜡脂",
   "block.tfc.cauldron.tallow": "装有蜡脂的炼药锅",
-  "block.tfc.fluid.tannin": "鞣酸",
-  "item.tfc.bucket.tannin": "鞣酸桶",
-  "fluid.tfc.tannin": "鞣酸",
-  "block.tfc.cauldron.tannin": "装有鞣酸的炼药锅",
+  "block.tfc.fluid.tannin": "鞣质",
+  "item.tfc.bucket.tannin": "鞣质桶",
+  "fluid.tfc.tannin": "鞣质",
+  "block.tfc.cauldron.tannin": "装有鞣质的炼药锅",
   "block.tfc.fluid.vinegar": "醋",
   "item.tfc.bucket.vinegar": "醋桶",
   "fluid.tfc.vinegar": "醋",
@@ -6670,7 +6670,7 @@
   "fluid.tfc.metal.high_carbon_red_steel": "熔融高碳红钢",
   "item.tfc.bucket.metal.high_carbon_red_steel": "熔融高碳红钢桶",
   "block.tfc.cauldron.metal.high_carbon_red_steel": "装有熔融高碳红钢的炼药锅",
-  "block.tfc.fluid.metal.unknown": "熔融合金",
+  "block.tfc.fluid.metal.unknown": "熔融未知合金",
   "fluid.tfc.metal.unknown": "熔融未知合金",
   "item.tfc.bucket.metal.unknown": "熔融未知合金桶",
   "block.tfc.cauldron.metal.unknown": "装有熔融未知合金的炼药锅",
@@ -7879,7 +7879,7 @@
   "tfc.recipe.barrel.tfc.barrel.large_soaked_hide": "浸灰大块皮革",
   "tfc.recipe.barrel.tfc.barrel.large_prepared_hide": "脱灰大块皮革",
   "tfc.recipe.barrel.tfc.barrel.large_leather": "鞣制大块皮革",
-  "tfc.recipe.barrel.tfc.barrel.tannin": "鞣酸",
+  "tfc.recipe.barrel.tfc.barrel.tannin": "鞣质",
   "tfc.recipe.barrel.tfc.barrel.jute_fiber": "沤麻",
   "tfc.recipe.barrel.tfc.barrel.sugar": "制糖",
   "tfc.recipe.barrel.tfc.barrel.glue": "胶水",
@@ -8291,7 +8291,7 @@
   "tfc.advancements.story.scraped_hide.title": "软磨硬泡",
   "tfc.advancements.story.scraped_hide.description": "把野兽皮浸在石灰水里，之后放在原木上刮净",
   "tfc.advancements.story.leather.title": "真皮工艺",
-  "tfc.advancements.story.leather.description": "把刮制好的皮革浸在淡水里，之后再浸入鞣酸里",
+  "tfc.advancements.story.leather.description": "把刮制好的皮革浸在淡水里，之后再浸入鞣质里",
   "tfc.advancements.story.bellows.title": "你接着吹",
   "tfc.advancements.story.bellows.description": "用皮革制作风箱",
   "tfc.advancements.story.papyrus.title": "埃及老“骨”董",
